Updating Spring Boot Version and Re-organizing code
In progress